<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleY="1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="484dp"
        android:layout_height="875dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759"
        app:srcCompat="@drawable/web_project_proposal_by_slidesgo__1_" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:background="#A600796B"
        android:scaleX="5"
        android:scaleY="5"
        android:text="@string/setad"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botaoSobre"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:background="#00796B"
        android:text="@string/sobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoProjetos" />

    <Button
        android:id="@+id/botaoSair"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:background="#00796B"
        android:text="@string/sair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoSobre" />

    <Button
        android:id="@+id/botaoConfig"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:background="#00796B"
        android:text="@string/configuracoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoMenuDeTrabalho" />

    <Button
        android:id="@+id/botaoMenuDeTrabalho"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="244dp"
        android:background="#00796B"
        android:text="@string/menuDeTrabalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botaoProjetos"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:background="#00796B"
        android:text="@string/projetos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoConfig" />

</androidx.constraintlayout.widget.ConstraintLayout>
