<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sobre">

    <Button
        android:id="@+id/botaoVoltar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="#00796B"
        android:text="@string/voltarSobre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="356dp"
        android:layout_height="106dp"
        android:text="@string/o_aplicativo_setad_foi_criado_com_o_objetivo_de_facilitar_o_estudo_dos_alunos_de_eletr_nica_b_sica_e_eletricidade_atrav_s_de_um_interface_intuitiva_os_estudantes_podem_simular_circuitos_b_sicos_dessas_mat_rias_tudo_pelo_seus_pr_prios_celulares_dessa_forma_a_aplica_o_facilita_e_torna_mais_inclusiva_a_experi_ncia_das_tarefas_pr_ticas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="361dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="62dp"
        android:text="@string/o_projeto_foi_desenvolvido_pela_equipe_jo_o_vitor_lima_da_silveira_marco_ant_nio_pereira_alves_fonseca_t_lio_henrique_gon_alves_sim_es_virg_nia_let_cia_afonso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="358dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/como_um_trabalho_para_a_escola_t_cnica_de_eletr_nica_no_ano_de_2021"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>